Fix bookmark icon not visible on details page

--- a/FootballResults.WebApp/Components/MiniComponents/BookmarkIcon.razor.css
+++ b/FootballResults.WebApp/Components/MiniComponents/BookmarkIcon.razor.css
@@ -14,11 +14,11 @@ path {
 }
 
 .default {
-    color: black;
+    color: var(--light);
 }
 
 .favorite {
-    color: white;
+    color: #F5DF4D;
 }
 
 .favoriteButton {
